fluxcd-dev/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: chatbot
spec:
  hosts:
  - chatbot.k8s
  gateways:
  - istio-ingress/k8s-gateway
  - mesh # applies to all the sidecars in the mesh
  http:
  - name: chatbot
    match:
      - uri:
          prefix: /api/messages
    route:
    - destination:
        host: app-chatbot
  # - name: ham4log-fe
  #   # Default for all traffic that does not match an API path (above)
  #   route:
  #   - destination:
  #       host: app-log4ham-fe
